--- a/style.css
+++ b/style.css
@@ -5,6 +5,12 @@ html {
 body {
   font-family: helvetica;
   font-size: 2rem;
+  background-color: lavender;
+  color: purple;
+}
+
+button {
+  color:
 }
 
 .center {
@@ -13,5 +19,17 @@ body {
 
 .mrgn {
   margin-left: 3%;
-  margin-bottom: 3%;
+  margin-bottom: 1%;
+}
+
+.hide {
+  display: none;
+}
+
+#options {
+  height: 2rem;
+}
+
+hr {
+  border-color: purple;
 }
